fixing overflow problem

--- a/src/components/Intro/_intro.scss
+++ b/src/components/Intro/_intro.scss
@@ -42,7 +42,6 @@
   padding: 1rem 0;
   display: flex;
   justify-content: space-between;
-  overflow-y: scroll;
 }
 
 .reactAndNodeSmallIcons {
