--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@
 
 html {
   margin: 0;
+  overflow-y: hidden;
 }
 header {
   height: 20vh;
